--- a/Absalyamov_WEB2/Absalyamov_WEB2.csproj
+++ b/Absalyamov_WEB2/Absalyamov_WEB2.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="PokaMusor\**" />
+    <Content Remove="PokaMusor\**" />
+    <EmbeddedResource Remove="PokaMusor\**" />
+    <None Remove="PokaMusor\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
