Надо что-то делать...
ужас какой-то

--- a/Absalyamov_WEB2/appsettings.json
+++ b/Absalyamov_WEB2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server = localhost\\sqlexpress;database=mygamedb;trusted_connection=true"
+    "DefaultConnection": "server = localhost\\sqlexpress;database=mylabbd;trusted_connection=true"
   },
   "AppSettings": {
     "Token": "my top secret key"
