--- a/Absalyamov_WEB2/Absalyamov_WEB2.csproj
+++ b/Absalyamov_WEB2/Absalyamov_WEB2.csproj
@@ -35,4 +35,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
